2012-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/util.lisp, src/interp/scan.boot,
	src/interp/s-parser.boot, src/interp/bootlex.lisp,
	src/interp/parsing.lisp: Use interpreter scanner for Spad.
	src/interp/preparse.lisp: Remove.
	src/interp/Makefile.in: Adjust.
	src/algebra/skpol.spad.pamphlet: Work around changed
	pile rules.

2012-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/setvart.boot, src/interp/i-toplev.boot,
	src/interp/lisplib.boot: Minor fixes.

2012-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/c-doc.boot, src/interp/c-util.boot,
	src/interp/msgdb.boot, src/interp/vmlisp.lisp,
	src/interp/spaderror.lisp: Minor cleanups.

2012-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/solvedio.spad.pamphlet: Do not use 'free'
	as identifier.

2012-10-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/op.spad.pamphlet,
	src/algebra/expr.spad.pamphlet,
	src/algebra/algfunc.spad.pamphlet: Add 'rootSum'.

2012-10-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/efstruc.spad.pamphlet: findLinearRelation2():
	Avoid division by zero.

2012-10-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/genser.spad.pamphlet: Really remove leading
	zeros in 'nthRootIfCan'.

2012-10-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intrf.spad.pamphlet: Add ParallelIntegrationTools.
	src/algebra/Makefile.in: Adjust.

2012-10-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/limitps.spad.pamphlet: Use 'mrv_limit' also
	for finite one-sided limits.

2012-10-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/mfinfact.spad.pamphlet,
	src/algebra/multfact.spad.pamphlet
	src/algebra/polycat.spad.pamphlet
	src/algebra/npcoef.spad.pamphlet: Minor cleanups.

2012-10-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/geneez.spad.pamphlet: Minor cleanup.

2012-10-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
