@@ -419,3 +419,76 @@
     (DATABASE . |DAASE|)
    )
 )
+
+;;; moved from fname.lisp
+
+;;
+;; Lisp support for cleaned up FileName domain.
+;;
+;; Created: June 20, 1991 (Stephen Watt)
+;;
+
+
+;; E.g.  "/"  "/u/smwatt"  "../src"
+(defun |DirToString| (d)
+  (cond
+    ((equal d '(:root)) "/")
+    ((null d) "")
+    ('t (string-right-trim "/" (namestring (make-pathname :directory d)))) ))
+
+(defun |StringToDir| (s)
+  (cond
+    ((string= s "/") '(:root))
+    ((string= s "")  nil)
+    ('t
+      (let ((lastc (aref s (- (length s) 1))))
+        (if (char= lastc #\/)
+          (pathname-directory (concat s "name.type"))
+          (pathname-directory (concat s "/name.type")) ))) ))
+
+(defun |myWritable?| (s)
+  (if (not (stringp s)) (|error| "``myWritable?'' requires a string arg."))
+  (if (string= s "") (setq s "."))
+  (if (not (|fnameExists?| s)) (setq s (|fnameDirectory| s)))
+  (if (string= s "") (setq s "."))
+  (if (> (|writeablep| s) 0) 't nil) )
+
+(defun |fnameMake| (d n e)
+  (if (string= e "") (setq e nil))
+  (make-pathname :directory (|StringToDir| d) :name  n :type e))
+
+(defun |fnameDirectory| (f)
+  (|DirToString| (pathname-directory f)))
+
+(defun |fnameName| (f)
+  (let ((s (pathname-name f)))
+    (if s s "") ))
+
+(defun |fnameType| (f)
+  (let ((s (pathname-type f)))
+    (if s s "") ))
+
+(defun |fnameExists?| (f)
+  (if (fricas-probe-file (namestring f)) 't nil))
+
+(defun |fnameReadable?| (f)
+  (let ((s
+          #-:GCL
+          (ignore-errors (open f :direction :input :if-does-not-exist nil))
+          #+:GCL
+          (open f :direction :input :if-does-not-exist nil)
+        ))
+    (cond (s (close s) 't) ('t nil)) )
+  )
+
+(defun |fnameWritable?| (f)
+  (|myWritable?| (namestring f)) )
+
+(defun |fnameNew| (d n e)
+  (if (not (|myWritable?| d))
+    nil
+    (do ((fn))
+        (nil)
+        (setq fn (|fnameMake| d (string (gensym n)) e))
+        (if (not (fricas-probe-file (namestring fn)))
+           (return-from |fnameNew| fn)) )))
