@@ -1,3 +1,11 @@
+2012-10-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/Makefile.in, src/interp/util.lisp,
+	src/interp/simpbool.boot, src/interp/nlib.lisp,
+	src/interp/g-boot.boot, src/interp/macros.lisp,
+	src/interp/define.boot, src/interp/spad.lisp:
+	Misc cleanups.
+
 2012-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/util.lisp, src/interp/scan.boot,
